[orga] Make sure we scroll on overflow in side nav

--- a/src/pretalx/static/orga/scss/_layout.scss
+++ b/src/pretalx/static/orga/scss/_layout.scss
@@ -29,6 +29,7 @@
   z-index: 100;
   position: fixed;
   margin-top: 50px;
+  overflow-y: auto;
 
   li span.has-children {
     display: flex;
